dataset1235/2025-2/1955397009/users/209087680/executions/1107611404_3921830315.log
== SUBMISSION (2025-08-19 13:37:12)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= x*2.86
z= y+50
a= (y+z)
b= a+(a*(34/100))
print(round(b,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
insira a quantidade de litros: 146.71
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
insira a quantidade de litros: 1202.69
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
insira a quantidade de litros: 450.24
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
insira a quantidade de litros: 736.9
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
insira a quantidade de litros: 1892.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
insira a quantidade de litros: 394.13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:36:17)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= x*2.86
z= y+50
a= (y+z)
b= a+a*(34/100)
print(round(b,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
insira a quantidade de litros: 146.71
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
insira a quantidade de litros: 1202.69
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
insira a quantidade de litros: 450.24
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
insira a quantidade de litros: 736.9
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
insira a quantidade de litros: 1892.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
insira a quantidade de litros: 394.13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:40:22)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= (x*2.86)
z= (y+50)
a= (y+z)*1.34
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
insira a quantidade de litros: 146.71
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
insira a quantidade de litros: 1202.69
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
insira a quantidade de litros: 450.24
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
insira a quantidade de litros: 736.9
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
insira a quantidade de litros: 1892.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
insira a quantidade de litros: 394.13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:36:37)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= x*2.86
z= y+50
a= (y+z)
b= a+(a*(34/100))
print(round(b,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
insira a quantidade de litros: 146.71
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
insira a quantidade de litros: 1202.69
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
insira a quantidade de litros: 450.24
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
insira a quantidade de litros: 736.9
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
insira a quantidade de litros: 1892.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
insira a quantidade de litros: 394.13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:35:59)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= x*2,86
z= y+50
a= (y+z)
b= a+a*(34/100)
print(round(b,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 6
    print(round(b,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 6
    print(round(b,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 6
    print(round(b,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 6
    print(round(b,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 6
    print(round(b,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 6
    print(round(b,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:37:58)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= x*2.86
z= y+50
a= (y+z)
b= a*1.34
print(round(b,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
insira a quantidade de litros: 146.71
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
insira a quantidade de litros: 1202.69
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
insira a quantidade de litros: 450.24
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
insira a quantidade de litros: 736.9
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
insira a quantidade de litros: 1892.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
insira a quantidade de litros: 394.13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 13:03:56)
-- CODE: 
import math
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
None
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
None
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
None
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
None
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
None
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 13:42:13)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= (x*2.86)
z= (y+50)
a= (z)*1.34
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
insira a quantidade de litros: 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
insira a quantidade de litros: 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
insira a quantidade de litros: 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
insira a quantidade de litros: 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
insira a quantidade de litros: 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
insira a quantidade de litros: 230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:34:53)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= x*2,86
z= y+50
a= (y+z)
b= a+a*(34/100)
print(b)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:41:17)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= (x*2.86)*1.34
z= (y+50)
a= (y+z)*1.34
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
insira a quantidade de litros: 173.82
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
insira a quantidade de litros: 1588.83
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
insira a quantidade de litros: 580.54
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
insira a quantidade de litros: 964.67
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
insira a quantidade de litros: 2513.82
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
insira a quantidade de litros: 505.36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:17:53)
-- CODE: 
print(pi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(pi)
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(pi)
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(pi)
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(pi)
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(pi)
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(pi)
          ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:36:05)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= x*2,86
z= y+50
a= (y+z)
b= a+a*(34/100)
print(round(b,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= y+50
       ~^~~
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:42:06)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= (x*2.86)
z= (y+50)
a= (z)*1.34
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
insira a quantidade de litros: 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
insira a quantidade de litros: 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
insira a quantidade de litros: 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
insira a quantidade de litros: 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
insira a quantidade de litros: 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
insira a quantidade de litros: 230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:39:42)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= (x*2.86)
z= (y+50)
a= (y+z)*1.34
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
insira a quantidade de litros: 146.71
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
insira a quantidade de litros: 1202.69
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
insira a quantidade de litros: 450.24
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
insira a quantidade de litros: 736.9
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
insira a quantidade de litros: 1892.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
insira a quantidade de litros: 394.13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:41:12)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= (x*2.86).1.34
z= (y+50)
a= (y+z)*1.34
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 2
    y= (x*2.86).1.34
               ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 2
    y= (x*2.86).1.34
               ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 2
    y= (x*2.86).1.34
               ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 2
    y= (x*2.86).1.34
               ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 2
    y= (x*2.86).1.34
               ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 2
    y= (x*2.86).1.34
               ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:39:13)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= (x*2.86)*1.34
z= (y+50)*1.34
a= (y+z)
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
insira a quantidade de litros: 160.27
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
insira a quantidade de litros: 1395.76
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
insira a quantidade de litros: 515.39
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
insira a quantidade de litros: 850.79
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
insira a quantidade de litros: 2203.4
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
insira a quantidade de litros: 449.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:03:54)
-- CODE: 
import math
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
None
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
None
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
None
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
None
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
None
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:41:34)
-- CODE: 
x=float(input("insira a quantidade de litros: "))
y= (x*2.86)
z= (y+50)
a= (y+z)*1.34
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
insira a quantidade de litros: 146.71
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
insira a quantidade de litros: 1202.69
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
insira a quantidade de litros: 450.24
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
insira a quantidade de litros: 736.9
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
insira a quantidade de litros: 1892.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
insira a quantidade de litros: 394.13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
